--- a/style.css
+++ b/style.css
@@ -8,6 +8,16 @@
     box-sizing: border-box;
 }
 
+body{
+
+}
+
+h1, h2,h3,h4,h5,h6, p {
+    margin: 0;
+    padding: 0;
+}
+
+
 nav{
     padding: 15px 0;
 }
@@ -29,4 +39,33 @@ nav{
     border-radius: 3px;
     top: -10px;
     right: -10px;
+}
+
+
+
+.product-area{
+    padding: 60px 0;
+}
+
+.item{
+    border: 1px solid #ced6e0;
+    padding: 10px;
+}
+
+.item img{
+    width: 100%;
+}
+
+.price-quantity{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.buttons{
+    display: flex;
+    align-items: center;
+    justify-content: space-between; 
+    gap: 10px;
+    cursor: pointer;
 }
